--- a/src/components/Exercise/styles.css
+++ b/src/components/Exercise/styles.css
@@ -1,7 +1,4 @@
-.sortable-ghost .exercise-card--dark {
-  box-shadow: 0 0 0 5px rgba(255, 255, 255, 0.3);
-}
-
+.sortable-ghost .exercise-card--dark,
 .sortable-ghost .exercise-card--light {
-  box-shadow: 0 0 0 5px rgba(0, 0, 0, 0.2);
+  opacity: 0.5;
 }
