--- a/src/components/Exercise/styles.css
+++ b/src/components/Exercise/styles.css
@@ -2,3 +2,8 @@
 .sortable-ghost .exercise-card--light {
   opacity: 0.5;
 }
+
+.sortable-ghost .mini-controls,
+.sortable-ghost ~ .sortable-item .mini-controls {
+  display: none;
+}
